force-app/main/default/objects/OpportunityLineItem/fields/CL_Product__c.field-meta.xml
<CustomField>
    <fullName>CL_Product__c</fullName>
    <description>Used by ClickLink Rule, is not necessary for users.</description>
    <formula>PricebookEntry.Product2.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used by ClickLink Rule, is not necessary for users.</inlineHelpText>
    <label>CL Product</label>
    <type>Text</type>
</CustomField>