force-app/main/default/objects/OpportunityLineItem/fields/Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year__c</fullName>
    <label>Fiscal Year</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FY 11</fullName>
            </value>
            <value>
                <fullName>FY 12</fullName>
            </value>
            <value>
                <fullName>FY 13</fullName>
            </value>
            <value>
                <fullName>FY 14</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>