force-app/main/default/objects/OpportunityLineItem/fields/Income_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Income_Schedule__c</fullName>
    <formula>Opportunity.Income_Schedule__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Income Schedule</label>
    <type>Text</type>
</CustomField>