force-app/main/default/objects/OpportunityLineItem/fields/Invoice_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Frequency__c</fullName>
    <formula>TEXT(Opportunity.Invoice_Frequency__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Auto-populated - comes from Oppty</inlineHelpText>
    <label>Invoice Frequency</label>
    <type>Text</type>
</CustomField>