force-app/main/default/objects/OpportunityLineItem/fields/Invoice_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Unit_Price__c</fullName>
    <formula>IF (Invoice_Frequency__c = &quot;Monthly&quot;, UnitPrice/ 12, 
IF (Invoice_Frequency__c = &quot;Semi-Annually&quot;,UnitPrice/ 2, 
IF (Invoice_Frequency__c = &quot;Annually&quot;,UnitPrice/ 1, 
IF (Invoice_Frequency__c = &quot;Quarterly&quot;,UnitPrice/ 4,
IF (Invoice_Frequency__c = &quot;1 Time&quot;,UnitPrice/ 1,0)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>