force-app/main/default/objects/OpportunityLineItem/fields/Total_Invoices__c.field-meta.xml
<CustomField>
    <fullName>Total_Invoices__c</fullName>
    <description>Auto-populated from Oppty</description>
    <formula>Opportunity.Total_Invoices__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Auto-populated from Oppty</inlineHelpText>
    <label>Total # Invoices</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>